New OBJ exporter does not export groups by material if dense mesh #102672

Closed
opened 2022-11-22 00:55:16 +01:00 by Taiseibutsu · 10 comments

System Information
Operating system: Windows

Blender Version
Broken: (example: 3.5.0)

Short description of error
Blender obj exporter does not export material groups within the .obj exporter if mesh is hight than aprox. 3500 polys


Exact steps for others to reproduce the error
test_export_material.blend
In the atteched file you can find two spheres with two material groups.
The only difference is it's mesh density. One exports correctly and the other does not.

Try exporting a mesh higher than aprox. 3500 polys.

**System Information** Operating system: Windows **Blender Version** Broken: (example: 3.5.0) **Short description of error** Blender obj exporter does not export material groups within the .obj exporter if mesh is hight than aprox. 3500 polys ``` ``` **Exact steps for others to reproduce the error** [test_export_material.blend](https://archive.blender.org/developer/F13957769/test_export_material.blend) In the atteched file you can find two spheres with two material groups. The only difference is it's mesh density. One exports correctly and the other does not. Try exporting a mesh higher than aprox. 3500 polys.
Author

Added subscriber: @Taiseibutsu

Added subscriber: @Taiseibutsu
Member

Added subscriber: @OmarEmaraDev

Added subscriber: @OmarEmaraDev
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Materials groups are exported correctly in my case. Did you confirm that by reimporting into Blender or another application?
Can you attach the obj you exported?

Materials groups are exported correctly in my case. Did you confirm that by reimporting into Blender or another application? Can you attach the obj you exported?
Author

In #102672#1449531, @OmarEmaraDev wrote:
Materials groups are exported correctly in my case. Did you confirm that by reimporting into Blender or another application?
Can you attach the obj you exported?

test_export_material_57651.obj

test_export_material_30594.obj

Here are the two exported files.

Please read line 62833 in test_export_material_30594 (Correct Export)
And compare it to line 121716 in test_export_material_57651

> In #102672#1449531, @OmarEmaraDev wrote: > Materials groups are exported correctly in my case. Did you confirm that by reimporting into Blender or another application? > Can you attach the obj you exported? [test_export_material_57651.obj](https://archive.blender.org/developer/F13961738/test_export_material_57651.obj) [test_export_material_30594.obj](https://archive.blender.org/developer/F13961739/test_export_material_30594.obj) Here are the two exported files. Please read line 62833 in test_export_material_30594 (Correct Export) And compare it to line 121716 in test_export_material_57651
Member

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'

Changed status from 'Needs User Info' to: 'Needs Developer To Reproduce'
Member

Okay, while material assignment is correct, groups seems to be incorrect by inspecting the file. As Taiseibutsu noted, the high density object have the following lines immediately after each other, which doesn't make sense, unless the usemtl are somehow expected to be used to infer the materials groups:

g 57651_white
g 57651_red
Okay, while material assignment is correct, groups seems to be incorrect by inspecting the file. As Taiseibutsu noted, the high density object have the following lines immediately after each other, which doesn't make sense, unless the `usemtl` are somehow expected to be used to infer the materials groups: ``` g 57651_white g 57651_red ```
Aras Pranckevicius self-assigned this 2022-11-30 12:15:17 +01:00

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

Changed status from 'Needs Developer To Reproduce' to: 'Confirmed'

This issue was referenced by eaef8d50bc

This issue was referenced by eaef8d50bc9acf35b279a25a93f9756da30a05ae

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne added this to the Pipeline, Assets & IO project 2023-02-09 15:40:01 +01:00
Bastien Montagne removed this from the Pipeline, Assets & IO project 2023-02-10 12:49:18 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#102672
No description provided.