Fix T102672: OBJ exporter "material groups" option wrong for objects with >32k faces

Turns out, using the wrong output buffer (global one, instead of
per-thread one) puts the data into the wrong buffer! Fixes T102672